# some_ecc

./: .gitignore  LICENSE  README.md  build.py  pyproject.toml
some_ecc/: secp256k1.pyi
src/: curve25519.zig  ed25519.zig  secp256k1.zig  utils.zig
tests/: test_secp256k1.py
